Adds data in simple YAML.  Wires up the fitler box.

--- a/_includes/menus/navigation.html
+++ b/_includes/menus/navigation.html
@@ -9,7 +9,7 @@
           <a href="/" title="{{ site.title }} | {{ site.tagline }}" class="hidden-xs hidden-sm hidden-md brand">{{ site.title }}</a>
           <a href="/" title="{{ site.title }} | {{ site.tagline }}" class="hidden-lg brand">{{ site.shortTitle }}</a>
 
-          <input type="search" class="form-control form-top-pad" id="font-filter-box" placeholder="Type to filter using descriptors like 'drink' or 'email' ...">
+          <input type="search" class="form-control form-top-pad filter-input" id="filter-box" placeholder="Just type a genre like 'Fantasy' or 'Sci-Fi' ...">
         {% else %}
           <a href="/" title="{{ site.title }} | {{ site.tagline }}" class="brand">{{ site.title }}</a>
         {% endif %}
