--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -241,7 +241,7 @@ h1 small {
   transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
 }
 
-#font-filter-box{
+.filter-input{
   display: inline;
   width: 80%;
   float:right;
