Fixes static links in navbar.

--- a/_includes/menus/navigation.html
+++ b/_includes/menus/navigation.html
@@ -26,11 +26,9 @@
       <div class="col-xs-12">
 
         <ul class="nav navbar-nav">
-          <li{% if page.navbar == 'fonts' %} class="active"{% endif %}><a href="/" title="{{ site.title }} | {{ site.tagline }}"><i class="fa fa-search"></i><span class="hidden-xs hidden-sm">&nbsp;Find Fonts</a></li>
+          <li{% if page.navbar == 'codes' %} class="active"{% endif %}><a href="/" title="{{ site.title }} | {{ site.tagline }}"><i class="fa fa-search"></i><span class="hidden-xs hidden-sm">&nbsp;Find Codes</a></li>
           <li{% if page.navbar == 'about' %} class="active"{% endif %} title="About the {{ site.title }}"><a href="/about"><i class="fa fa-info-circle"></i><span class="hidden-xs hidden-sm">&nbsp;About</a></li>
           <li><a href="https://github.com/netflix-cheatcodes/netflix-cheatcodes.github.io" target="_blank"><i class="fa fa-github"></i><span class="hidden-xs hidden-sm" title="Look under the hood at GitHub">&nbsp;Fork Me</a></li>
-          <li><a href="http://fortawesome.github.io/Font-Awesome/" title="Jump to the FontAwesome Website" target="_blank"><i class="fa fa-flag"></i><span class="hidden-xs hidden-sm">&nbsp;FontAwesome Website</a></li>
-          <li></li>
         </ul>
       </div>
     </div>
