Updates styles.  Addresses about layout.

--- a/_includes/framing/header.html
+++ b/_includes/framing/header.html
@@ -4,7 +4,7 @@
 {% if page.header %}
 <header>
 
-<section id="page-heading" class="palette">
+<section class="page-heading palette">
 <div id="heading-banner">
 
   <div class="container">
