Update about and footer.

--- a/_includes/framing/footer.html
+++ b/_includes/framing/footer.html
@@ -4,7 +4,9 @@
 <div class="container">
 <div class="row">
 
-  <p class="text-center footer-copyright">Copyright &copy; {{ site.time | date: '%Y' }} &mdash; {{ site.title }}, {{ site.tagline }}</p>
+    <p class="text-center footer-copyright">Copyright &copy; {{ site.time | date: '%Y' }} &mdash; {{ site.title }} &mdash; <a href="http://dereknutile.com/" target="_blank">Derek Nutile</a></p>
+
+    <p class="text-center footer-copyright">Oh, and this silly thing is not affiliated with Netflix in any way.</p>
 
 </div><!-- /.row -->
 </div><!-- /.container -->
