--- a/_includes/framing/head.html
+++ b/_includes/framing/head.html
@@ -18,7 +18,7 @@
   <meta name="twitter:domain" content="{{ site.title }}"/>
   <meta name="twitter:creator" content="@{{ site.twitter-username }}"/>
 
-  <link rel="shortcut icon" href="{{ site.baseurl }}{{ site.favicon }}">
+  <link rel="shortcut icon" href="{{ site.baseurl }}/{{ site.favicon }}">
 
   <!-- css -->
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/vendors/bootstrap/dist/css/bootstrap.min.css">
