--- a/_includes/framing/head.html
+++ b/_includes/framing/head.html
@@ -1,7 +1,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>{{ site.shortTitle }}{% if page.title %} | {{ page.title }}{% endif %}</title>
+  <title>{{ site.title }}</title>
   <meta name="viewport" content="width=device-width">
   <meta name="description" content="{{ site.description }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
